<resources>
    <string name="app_name">Farbverbrauch</string>

    <string name="title_rezepte">1K/2K/UV Rezepte</string>
    <string name="title_farbverbrauch">Farbverbrauch</string>

    <string name="navigation_drawer_open">Öffne Navigation Drawer</string>
    <string name="navigation_drawer_close">Schließe Navigation Drawer</string>

    <string name="action_updateJSONS">Update Datenbanken</string>

    <string name="druckflaecheM2">Druckfläche in m²</string>
    <string name="farbmengeCM3">Farbmenge in cm³</string>
    <string name="farbmengeL">Farbmenge in Liter</string>

    <string name="vGewebe">Verwendetes Gewebe</string>
    <string name="anzDrucke">Anzahl Drucke</string>
    <string name="drucklaengeCM">Drucklänge in cm</string>
    <string name="druckbreiteCM">Druckbreite in cm</string>
    <string name="bedruckungsgrad">Druckgrad in %</string>
    <string name="berechnen">Berechnen</string>
    <string name="dl_json">Downloade JSON Datenbank&#8230;</string>
    <string name="noDL">JSON Datenbank noch nicht heruntergeladen, bitte erneut erledigen!</string>
    <string name="load_json">Lade JSON Datenbank</string>
    <string name="offline">Gerät oder Server ist offline, bitte Verbindung überprüfen!</string>
    <string name="load_values">Lade Daten von Datenbank</string>
    <string name="zeigeR">Zeige Rezeptur</string>
    <string name="rezeptname">1K/2K/UV Rezeptname</string>
    <string name="fail_load">Laden der JSON Datenbank fehlgeschlagen, bitte erneut versuchen und Datenbanken updaten!</string>
    <string name="farbe">Farbe</string>
    <string name="menge">Menge</string>
    <string name="werte">Werteeingabe</string>
    <string name="ergebnis">Ergebnis</string>
    <string name="action_showHelp">Zeige Hilfe</string>
    <string name="ok">OK</string>
    <string name="invalid_entry">Ungülige Eingabe! \nBitte Eingabe überprüfen.</string>
    <string name="helpdialog">Für Beispiele auf den jeweiligen Pfeil klicken. Bei Bedarf Vorschlag aus der Dropdownliste wählen.</string>
    <string name="arrow_rezeptebuttonhelp">Hilfepfeil für den \"Zeige Rezept\" Button</string>
    <string name="arrow_rezeptehelp">Hilfepfeil für die Rezeptnamen Texteingabe</string>
    <string name="arrow_farbverbrauch_help">Hilfepfeil für Farbverbrauchsinformationen</string>
    <string name="arrow_farbvarbrauchbutton_help">Hilfepfeil für \"Farbverbrauch berechnen\" Button</string>
    <string name="previous_step">Bitte zuerst den vorhergehend Schritt erledigen!</string>
</resources>
