<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="de.myself5.farbverbrauch.Rezepte">

    <TextView
        android:id="@+id/rezepttext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/rezeptname"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <AutoCompleteTextView
        android:id="@+id/rezept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/rezepttext"
        android:ems="10" />

    <Button
        android:id="@+id/zeige"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_below="@id/rezept"
        android:text="@string/zeigeR" />

    <TableLayout
        android:id="@+id/wertetabelle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_below="@+id/zeige"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp">

        <TableRow
            android:id="@+id/tabellenheader"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <TextView
                android:id="@+id/farbe"
                android:gravity="center"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:background="@drawable/cell_shape"
                android:padding="5dp"
                android:text="@string/farbe"
                android:textAppearance="?android:attr/textAppearanceMedium"></TextView>

            <TextView
                android:id="@+id/menge"
                android:gravity="center"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:background="@drawable/cell_shape"
                android:padding="5dp"
                android:text="@string/menge"
                android:textAppearance="?android:attr/textAppearanceMedium"></TextView>

        </TableRow>

        <TableRow
            android:id="@+id/zutat1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <TextView
                android:id="@+id/farbe1"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/cell_shape"
                android:padding="5dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_gravity="center_vertical"></TextView>

            <TextView
                android:id="@+id/menge1"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/cell_shape"
                android:padding="5dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_gravity="center_vertical"></TextView>
        </TableRow>
        <TableRow
            android:id="@+id/zutat2"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <TextView
                android:id="@+id/farbe2"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/cell_shape"
                android:padding="5dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_gravity="center_vertical"></TextView>

            <TextView
                android:id="@+id/menge2"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/cell_shape"
                android:padding="5dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_gravity="center_vertical"></TextView>
        </TableRow>
        <TableRow
            android:id="@+id/zutat3"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <TextView
                android:id="@+id/farbe3"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/cell_shape"
                android:padding="5dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_gravity="center_vertical"></TextView>

            <TextView
                android:id="@+id/menge3"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/cell_shape"
                android:padding="5dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_gravity="center_vertical"></TextView>
        </TableRow>
        <TableRow
            android:id="@+id/zutat4"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <TextView
                android:id="@+id/farbe4"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/cell_shape"
                android:padding="5dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_gravity="center_vertical"></TextView>

            <TextView
                android:id="@+id/menge4"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/cell_shape"
                android:padding="5dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_gravity="center_vertical"></TextView>
        </TableRow>
        <TableRow
            android:id="@+id/zutat5"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <TextView
                android:id="@+id/farbe5"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/cell_shape"
                android:padding="5dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_gravity="center_vertical"></TextView>

            <TextView
                android:id="@+id/menge5"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/cell_shape"
                android:padding="5dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_gravity="center_vertical"></TextView>
        </TableRow>

    </TableLayout>

</RelativeLayout>